components/device-mgt/org.wso2.carbon.device.mgt.ui/src/main/resources/jaggeryapps/devicemgt/app/units/cdmf.unit.ui.theme/public/css/custom-desktop.css
/* ... */
.table.list-table.grid-view > thead > tr > td,
.table.list-table.grid-view > thead > tr > th {
    display: inline-block;
}

.table.list-table.grid-view > thead > tr > td:not(:empty):before,
.table.list-table.grid-view > thead > tr > th:not(:empty):before,
.table.list-table > thead > tr.filter-box > td:not(:empty):before,
.table.list-table > thead > tr.filter-box > th:not(:empty):before {
    content: attr(data-for);
}

.table.list-table.grid-view .hidden-on-grid-view {
    display: none;
}

.table.list-table.grid-view .padding-reduce-on-grid-view {
    padding: 1px;
}

.table.list-table.grid-view .text-left-on-grid-view {
    text-align: left;
}

.table.list-table.grid-view .text-right-on-grid-view {
    text-align: right;
}

.table.list-table.grid-view .text-center-on-grid-view {
    text-align: center;
}

.table.list-table.grid-view tr,
.table.list-table > thead > tr {
    display: inline-block;
    padding: 15px;
}

.table.list-table.grid-view .filter-row,
.table.list-table .filter-row.filter-box {
    background: #e4e4e4;
    margin: 0;
    display: block;
}

.table.list-table .filter-row.filter-box tr {
    width: auto;
    padding: 15px;
}

.table.list-table.grid-view .filter-row th:empty,
.table.list-table .filter-row.filter-box th:empty {
    display: none;
}

.table.list-table.grid-view tr td {
    padding: 0;
}

@media (max-width: 767px) {
    .table.list-table.grid-view > thead > tr,
    .table.list-table.grid-view > thead > tr > td,
    .table.list-table.grid-view > thead > tr > th {
        /*display: block;*/
    }

    .table.list-table > thead > tr.filter-row > td,
    .table.list-table > thead > tr.filter-row > th {
        display: block;
    }
}

@media (min-width: 320px) and (max-width: 479px) {
    .table.list-table.grid-view tr {
        width: 100%;
    }
}

@media (min-width: 480px) and (max-width: 767px) {
    .table.list-table.grid-view tr {
        width: 50%;
    }
}

@media (min-width: 768px) and (max-width: 991px) {
    .table.list-table.grid-view tr {
        width: 33.3%;
    }
}

@media (min-width: 992px) and (max-width: 1199px) {
    .table.list-table.grid-view tr {
        width: 20%;
    }
}

@media (min-width: 1200px) {
    .table.list-table.grid-view tr {
        width: 12%;
    }
}

/* ========================================================================
 * thumbnail styles
 * ======================================================================== */
.thumbnail {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
}

.thumbnail.icon {
    border: none;
    margin: 0;
    background: #11375B;
    color: #fff;
    text-align: center;
    position: relative;
}

.thumbnail.icon:before {
    display: block;
    content: "";
    width: 100%;
    padding-top: 100%;
}

.thumbnail.icon > .square-element {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.thumbnail.icon .square-element:before {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.thumbnail.icon img {
    width: 100%;
}

.status-active {
    color: #A4C639;
}

.status-inactive {
    color: #a94442;
}

.status-removed {
    color: #a99d2f;
}

/* ========================================================================
 * pagination styles
 * ======================================================================== */
.pagination > li > a,
.pagination > li > a:focus,
.pagination > li > a:hover,
.pagination > li > span,
.pagination > li > span:hover {
    text-decoration: none;
    color: #2c313b;
}

.pagination > li:first-child > a,
.pagination > li:first-child > span,
.pagination > li:last-child > a,
.pagination > li:last-child > span {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
}

.pagination > .active > a,
.pagination > .active > a:focus,
.pagination > .active > a:hover,
.pagination > .active > span,
.pagination > .active > span:focus,
.pagination > .active > span:hover {
    background: #11375B;
    border-color: #11375B;
}

.pagination > .disabled > a,
.pagination > .disabled > a:focus,
.pagination > .disabled > a:hover,
.pagination > .disabled > span,
.pagination > .disabled > span:focus,
.pagination > .disabled > span:hover {
    display: none;
}

/* ========================================================================
 * tiles styles
 * ======================================================================== */
ul.tiles {
    list-style: none;
    margin: 0;
    padding: 0;
}

ul.tiles li {
    display: inline-block;
}

ul.tiles li.square {
    min-width: 80px;
    position: relative;
}

ul.tiles li.square:before {
    display: block;
    content: "";
    width: 100%;
    padding-top: 100%;
}

ul.tiles li.square > .square-element {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

ul.tiles li a {
    text-decoration: none;
    padding: 5px;
    background: #f3f3f3;
    color: #222222;
    display: block;
    overflow: hidden;
    line-height: 1.2em;
    white-space: normal;
    text-transform: capitalize;
    font-size: 14px;
}

ul.tiles .icon {
    display: block;
    font-size: 15px;
    margin: 0 auto 5px;
}

/* ========================================================================
 * modal popup styles
 * ======================================================================== */

/* ========================================================================
 * asset details styles
 * ======================================================================== */
.asset-image {
    max-width: 150px;
    background: #11375B;
    float: none !important;
}

.asset-desc .asset-name {
    font-size: 24px;
    margin-bottom: 0;
}

.asset-desc .asset-publisher {
    font-size: 14px;
    margin-bottom: 20px;
}

.media-body {
    width: 10000px;
}
/* ... */

